Thu Dec 24 09:54:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_string.cpp:
          Const changes, layout changes, call ACE_OS::strncat instead of
          strncat directly

        * ace/Log_Msg.cpp:
        * ace/Log_Msg.h:
          Const changes

        * ace/config-win32-borland.h:
          C++ Builder 2010 has a broken wcsncat, reported as QC80630, for
          this version we now enable the ACE emulation for wcsncat

        * ace/OS_NS_wchar.cpp:
          Initialise some pointers with 0

Mon Dec 21 11:29:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Fixed error message and added a test for generated file headers

Mon Dec 21 11:26:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/bootstrap:
          Invoke autoupdate as part of this script

Sun Dec 20 07:58:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/checked_iterator.h:
          stl port doesn't have a checked iterator. This fixes bugzilla
          3799 and 3420. Thanks to <sailzeng at tencent dot com> and
          Mark Hebbel <Mark dot Hebbel at baslerweb dot com> for
          reporting this

Fri Dec 18 17:40:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessVX_Unix.pm:
        * bin/PerlACE/ProcessVX_Win32.pm:
          Added IgnoreHostRoot

Fri Dec 18 12:55:00 UTC 2009  Martin Corino  <mcorino@remedy.nl>

        * NEWS:
          Updated fixed bugzilla entries.

Thu Dec 17 12:29:00 UTC 2009  Martin Corino  <mcorino@remedy.nl>

        * ace/INET_Addr.inl:
          Fixed bug in ::is_multicast() for little-endian platforms.
          This fixes Bugzilla #3729.

        * tests/Bug_3729_Regression_Test.cpp:
          Fixed typo in logfile name.

        * tests/run_test.lst:
          Removed !FIXED_BUGS_ONLY for Bug_3729_Regression_Test.

Wed Dec 16 11:24:00 UTC 2009  Martin Corino  <mcorino@remedy.nl>

        * ACE_wrappers/ace/Log_Msg.h: